--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,11 +7,11 @@
     <title itemProp="name" lang="en">
       Covid Nigeria Api
     </title>
+    <meta name="google-site-verification" content="4RayeckvHKdYW4weJgg3VhbyIoiclnypgjdtyHJgVaU" />
     <link rel="canonical" href="https://covidnigeria.ga" />
 
     <meta name="description" content='Get up-to-date, quality and well detailed data for the coronavirus for all states all over nigeria' />
     <meta name="keywords" content='Coronavirus, covid nigeria, covidnigeria, covid nigeria api, covid 19 nigeria api, covid one nine, covid, covid19, covid-19, coronavirus nigeria, nigeria, corona, corona nigeria, coronavirus in nigeria, coronavirus api, coronavirus api nigeria, coronavirus api for nigeria, covid 19 api, aovid-19 api, covid 19 api for nigeria, covid-19 api for nigeria, covid 19 api in nigeria, coronavirus data in nigeria, ncdc' />
-    <meta name="google-site-verification" content='4RayeckvHKdYW4weJgg3VhbyIoiclnypgjdtyHJgVaU' />
     <meta property="og:title" content='Covid Nigeria Api' />
     <meta property="og:description" content='Get up-to-date, quality and well detailed data for the coronavirus for all states all over nigeria' />
     <meta property="og:type" content="website" />
