--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,30 +8,30 @@
       Covid Nigeria Api
     </title>
     <meta name="google-site-verification" content="4RayeckvHKdYW4weJgg3VhbyIoiclnypgjdtyHJgVaU" />
-    <link rel="canonical" href="https://covidnigeria.ga" />
+    <link rel="canonical" href="http://covidnigeria.ga" />
 
     <meta name="description" content='Get up-to-date, quality and well detailed data for the coronavirus for all states all over nigeria' />
     <meta name="keywords" content='Coronavirus, covid nigeria, covidnigeria, covid nigeria api, covid 19 nigeria api, covid one nine, covid, covid19, covid-19, coronavirus nigeria, nigeria, corona, corona nigeria, coronavirus in nigeria, coronavirus api, coronavirus api nigeria, coronavirus api for nigeria, covid 19 api, aovid-19 api, covid 19 api for nigeria, covid-19 api for nigeria, covid 19 api in nigeria, coronavirus data in nigeria, ncdc' />
     <meta property="og:title" content='Covid Nigeria Api' />
     <meta property="og:description" content='Get up-to-date, quality and well detailed data for the coronavirus for all states all over nigeria' />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content='https://www.covidnigeria.ga' />
+    <meta property="og:url" content='http://www.covidnigeria.ga' />
     <meta property="og:site_name" content='Covid Nigeria Api' />
-    <meta property="og:image" content='https://covidnigeria.ga/og.png' />
+    <meta property="og:image" content='http://covidnigeria.ga/og.png' />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:locale" content='en_US' />
     <meta itemProp="name" content='Covid Nigeria Api' />
     <meta itemProp="description" content='Get up-to-date, quality and well detailed data for the coronavirus for all states all over nigeria' />
-    <meta itemProp="image" content='https://covidnigeria.ga/og.png' />
+    <meta itemProp="image" content='http://covidnigeria.ga/og.png' />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content='https://covidnigeria.ga' />
+    <meta name="twitter:url" content='http://covidnigeria.ga' />
     <meta name="twitter:site" content='@The_guy_himself' />
     <meta name="twitter:creator" content='@The_guy_himself' />
     <meta name="twitter:title" content='Covid Nigeria Api' />
     <meta name="twitter:description" content='Get up-to-date, quality and well detailed data for the coronavirus for all states all over nigeria' />
-    <meta name="twitter:image" content='https://covidnigeria.ga/og.png' />
+    <meta name="twitter:image" content='http://covidnigeria.ga/og.png' />
     <meta name="twitter:image:alt" content='Covid Nigeria Api' />
 
     <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/apple-icon-57x57.png">
